--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "^5.2.0",
         "@angular/router": "^5.2.0",
         "@swimlane/ngx-datatable": "^13.0.1",
+        "angular-in-memory-web-api": "^0.6.0",
         "core-js": "^2.4.1",
         "rxjs": "^5.5.6",
         "typescript": "^2.9.1",
