--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build --prod",
+        "build": "ng build --prod --aot",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
@@ -23,6 +23,7 @@
         "@angular/router": "^5.2.0",
         "@swimlane/ngx-datatable": "^13.0.1",
         "angular-in-memory-web-api": "^0.5.4",
+        "animate.css": "^3.6.1",
         "core-js": "^2.4.1",
         "rxjs": "^5.5.6",
         "typescript": "^2.9.1",
