--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "^5.2.0",
         "@angular/platform-browser-dynamic": "^5.2.0",
         "@angular/router": "^5.2.0",
+        "@fortawesome/fontawesome-free": "^5.1.0",
         "@swimlane/ngx-datatable": "^13.0.1",
         "angular-in-memory-web-api": "^0.5.4",
         "animate.css": "^3.6.1",
